all code copied to index.html

--- a/PersonalWebsite/index.html
+++ b/PersonalWebsite/index.html
@@ -1,39 +1,52 @@
-<!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Arjun Rajpal</title>
 
-        <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <script src="js/vendor/jquery-1.12.0.min.js"></script>
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+    <script src="js/main.js"></script>
 
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+    <!--<link rel="icon" type="image/ico" href="img/AR_LOGO.png">-->
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+</head>
+<body>
+    <section class="container">
+
+        <section id="name">
+            <i class="fa fa-chevron-left fa-3x"></i>
+                <span class="details"> ARJUN RAJPAL </span>
+            <i class="fa fa-chevron-right fa-3x"></i>
+        </section>
+
+        <section id="degree">
+             <i class="fa fa-hashtag fa-3x"></i>
+                <span class="details"> B.Tech, Software Engineering </span>
+        </section>
+
+        <section id="profile">
+            <div id="div-top">
+                <img id="printer" src="img/print_topview.png">
+            </div>
+            <div id="div_bottom">
+                <img id="profile_photo" src="img/cut.png">
+            </div>
+        </section>
+
+        <section id="mylinks">
+            <ul>
+            <li><a href="https://drive.google.com/open?id=0Bzh2rpxv2tDlcElVMXpzcXJkM1U"><i class="fa fa-file-pdf-o fa-2x"></i></a></li>
+            <li><a href="https://www.github.com/arjunrajpal"><i class="fa fa-github-square fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/arjunrajpal/"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+            <li><a href="https://www.facebook.com/arjun.rajpal.75"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+            <li><a href="mailto:rajpal.arjun@yahoo.in"><i class="fa fa-envelope-square fa-2x"></i></a></li>
+            </ul>
+        </section>
+    </section>
+</body>
 </html>
