updated for different phones

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <section class="container">
+    <div class="container">
 
         <section id="name">
             <i class="fa fa-chevron-left fa-3x"></i>
@@ -40,13 +40,13 @@
 
         <section id="mylinks">
             <ul>
-            <li><a href="https://drive.google.com/open?id=0Bzh2rpxv2tDlcElVMXpzcXJkM1U"><i class="fa fa-file-pdf-o fa-2x"></i></a></li>
-            <li><a href="https://www.github.com/arjunrajpal"><i class="fa fa-github-square fa-2x"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/arjunrajpal/"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-            <li><a href="https://www.facebook.com/arjun.rajpal.75"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-            <li><a href="mailto:rajpal.arjun@yahoo.in"><i class="fa fa-envelope-square fa-2x"></i></a></li>
+                <li><a href="https://drive.google.com/open?id=0Bzh2rpxv2tDlcElVMXpzcXJkM1U"><i class="fa fa-file-pdf-o fa-2x"></i></a></li>
+                <li><a href="https://www.github.com/arjunrajpal"><i class="fa fa-github-square fa-2x"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/arjunrajpal/"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                <li><a href="https://www.facebook.com/arjun.rajpal.75"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+                <li><a href="mailto:rajpal.arjun@yahoo.in"><i class="fa fa-envelope-square fa-2x"></i></a></li>
             </ul>
         </section>
-    </section>
+    </div>
 </body>
 </html>
