corrected name of AISSCE

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">AISSEC</h3>
+									<h3 class="timeline-title">AISSCE</h3>
 									<span class="company">Delhi Public School Mathura Road - 2000 - 2014</span>
 									<p>Overall Second in class 12th in Science Stream in school</p>
 									<p>Gold Medallist</p>
