minor fixes + updates

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
 							<h3><span>Coder - Web Developer - Machine Learning Enthusiast</span></h3>
 							<p>
 								<ul class="website-social-icons">
-									<li><a target="_blank" href="https://drive.google.com/file/d/0Bzh2rpxv2tDlNFBkdnBWUXI4dTA/view?usp=sharing"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i></a></li>
+									<li><a target="_blank" href="https://drive.google.com/open?id=1m-e-Gu5E6qdtnnWIWm8J7zT_X5x0U8Tw"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i></a></li>
 									<li><a target="_blank" href="https://www.github.com/arjunrajpal"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 									<li><a target="_blank" href="https://www.linkedin.com/in/arjunrajpal/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
 									<li><a target="_blank" href="https://www.facebook.com/arjun.rajpal.75"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 									<li><a target="_blank" href="mailto:rajpal.arjun@yahoo.in"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+									<li><a target="_blank" href="https://medium.com/@arjun.rajpal"><i class="fa fa-medium"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -71,7 +72,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h2>Hello There!</h2>
-					<p>I am a final year Software Engineering student at Delhi Technological University.</p>
+					<p>I am a B.Tech CS graduate from Delhi Technological University (DTU), India which is one of the top 5 engineering institutes in the country. I am currently working as a Software Development Engineer at Expedia Group for the past 1 year.</p>
 					<p>I am a programmer and an open source developer. I have keen interest in any field related to technology whether it be Development, Machine Learning, Blockchain or competitive programming.</p>
 				</div>
 			</div>
@@ -80,16 +81,32 @@
 
 	<div id="website-resume" class="website-bg-color">
 		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center website-heading">
-					<h2>My Resume</h2>
-				</div>
-			</div>
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline">
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Work Experience</h3></div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Software Development Engineer I</h3>
+									<span class="company">Expedia - July 2019 - Present</span>
+								</div>
+								<div class="timeline-body">
+									<p>Currently working with Enterprise Risk and Security (ERS) team to detect fraudulent transactions.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box timeline-inverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Associate Software Development Engineer</h3>
+									<span class="company">Expedia - July 2018 - July 2019</span>
+								</div>
+							</div>
 						</li>
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
@@ -384,15 +401,12 @@
 			</div>
 		</div>
 	</div>
-
-	<div id="map" class="website-map"></div>
-	</div>
 	
 	<div id="website-footer">
 		<div class="container">
 			<div class="row">
 				<div>
-					<p>&copy; 2017 All Rights Reserved. <br>Designed by Arjun Rajpal</p>
+					<p>&copy; 2019 All Rights Reserved. <br>Designed by Arjun Rajpal</p>
 				</div>
 			</div>
 		</div>
@@ -414,9 +428,6 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
-	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
